# MetaWear-SDK-Python

./: .gitignore  .gitmodules  IMU MACids.txt  LICENSE.md  MANIFEST.in  README.md  README.rst  desktop.ini  setup.py  test.py
docs/: .gitignore  Makefile
docs/source/: accelerometer.rst  advanced_features.rst  ambientlightsensor.rst  barometer.rst  conf.py  core_modules.rst  cppbridge.rst  dataprocessor.rst  datasignal.rst  event.rst  gpio.rst  gyro.rst  haptic.rst  humidity.rst  i2c.rst  ibeacon.rst  index.rst  led.rst  logger.rst  logging.rst  macro.rst  magnetometer.rst  metadataprocessor.rst  metawearboard.rst  metawearscanner.rst  peripherals.rst  sensor_fusion.rst  sensors.rst  settings.rst  spi.rst  temperature.rst  timer.rst
examples/: acc_threshold_detector.py  anonymous_datasignals.py  calibrate.py  data_fuser.py  data_processor.py  firmware_build.py  full_reset.py  gyro_data_0.csv  led.py  led_dongle.py  led_temp.py  log_acc.py  log_acc_perf.py  log_download.py  log_temp.py  macro_remove.py  macro_setup.py  motion_record_log.py  motion_record_log_no_reset.py  motion_record_stream.py  multi_device.py  pyproject.toml  scan_connect.py  stream_acc.py  stream_acc_gyro.py  stream_acc_gyro_bmi160.py  stream_acc_gyro_bmi270.py  stream_acc_packed.py  stream_acc_x.py  stream_data.py  stream_fused.py  stream_gyro.py  stream_gyro_packed.py  stream_mag.py  stream_quat.py  stream_temp.py  update_firmware.py
mbientlab/metawear/: __init__.py  metawear.py
