[tool.poetry]
name = "mbientlab-examples"
version = "0.1.0"
description = ""
authors = ["Alois Klink <alois@nquiringminds.com>"]

[tool.poetry.dependencies]
python = "^3.10"
metawear = { path = "../" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
